# GPU_mode

./: CMakeLists.txt  CMakelists.txt  README.md  test_colab_server.ipynb
include/: cuda_utils.hpp
matrix_multiplication/: CMakeLists.txt  matmul.cu  matmul_naive.cu  matmul_tiled.cu
reduction/: CMakeLists.txt  reduce_naive_add.cu
rmsNorm/: rmsNorm.cu
vector_add/: CMakeLists.txt  CMakelists.txt  vec_add.cu  vec_add_opt.cu
